# Application

./: Cargo.toml  Htier_messages.pkl  README.md  README_QUICK_REFERENCE.md  run_app.bat
HtierApp/: StreamlitApp_notes.txt  app.py  app.py.bak  htier.md  htier.md.bak  pyproject.toml.bak  universal_messages.pkl  universal_messages.pkl.bak
c_bridge/: C_file_compilation_procedure.txt  Makefile  config_parameters.h  first_crypto_operation.txt  main - Copy.c  main.c  send_crypto_operation.txt
cpp_builder/x64/Debug/: cppbuilder.exe.recipe  cppbuilder.ilk  vc143.idb
cpp_builder/x64/Debug/cppbuilder.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  cppbuilder.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cpp_builder/x64/Release/: cppbuilder.exe.recipe  cppbuilder.ipdb
cpp_builder/x64/Release/cppbuilder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  cppbuilder.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
java_bridge/: SimpleBridge.java  StreamBridge.java  pom.xml
python_bridge/: run_python_bridge.bat  run_python_bridge.bat.bak  stream_bridge_http.py
src/: crypto.rs  lib.rs  main.rs  server.rs
