[package]
name = "Htier"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pure Rust HTTP server
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pure Rust cryptography - avoiding native dependencies
ring = "0.17"
base64 = "0.22"
hex = "0.4"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Additional utilities
bytes = "1.0"

# Configuration
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"
